[tool.poetry]
name = "balloting-master"
version = "0.1.0"
description = "A python program to automate the balloting(and potentially other processes) on the unilag student portal"
authors = ["Ukeme Edet <ukemeedet2207@gmail.com>"]
license = "GNU General Public License v3.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
pylint = "^3.2.2"
black = "^24.4.2"
pre-commit = "^3.7.1"

[tool.black]
line-length = 80

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
